[package]
name = "piston-fake_dpi"
version = "0.5.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["piston", "window", "wrapper", "dpi"]
description = "A window wrapper that simulates fake Hi-DPI screen by manipulating window events"
license = "MIT"
repository = "https://github.com/PistonDevelopers/fake_dpi.git"
homepage = "https://github.com/PistonDevelopers/fake_dpi"
documentation = "https://docs.rs/piston-fake_dpi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fake_dpi"

[dependencies]
pistoncore-input = "1.0.0"
pistoncore-window = "0.47.0"
